# indexer

./: .env-example  .gitignore  .gmrc  LICENSE  Procfile  README.md  docker-compose.yml  go.mod  go.sum  heroku.Dockerfile  heroku.yml  index.go  index.py  index_blocks.py  index_class_issuers.py  index_orders.py  index_proposals.py  index_retires.py  index_transfers.py  index_votes.py  main.py  members.json  package-lock.json  package.json  policy.json  proposal.json  pyproject.toml  requirements.txt  script.py  utils.py
.github/workflows/: test.yml
api/: README.md  app.go  app_test.go  config.go  config_test.go  go.mod  go.sum
api/cmd/: main.go
api/handlers/: events.go  response.go
api/model/: model.go
db/: README.md  db.go  db_test.go  go.mod  go.sum  models.sql.go  reader.go  reader.sql.go  sqlc.yaml
db/queries/: reader.sql
db/testutils/: testutils.go
docker/: api.Dockerfile  indexer.Dockerfile  indexer_start.sh  ledger.Dockerfile  regen.Dockerfile  tester.Dockerfile
migrations/: README.md  initial_schema.sql  schema_snapshot.sql
scripts/: test_account.sh  test_index_proposals.sh
sql/: 001_init.sql  002_fix_msg_attr.sql  README.md  V1_10__class_issuers.sql  V1_11__class_issuers_indexes.sql  V1_12__votes.sql  V1_1__fix_msg_attr.sql  V1_2__add_retirements_table.sql  V1_3__add_msg_event_attr_type_idx.sql  V1_4__retirements_owner_idx.sql  V1_5__add_proposals_table.sql  V1_6__add_tx_hash.sql  V1_7__index_group_policy_address.sql  V1_8__index_proposal_id.sql  V1_9__all_ecocredit_txes.sql  V1__init.sql  run_all_migrations.sh
(+15 files in other folders)
